--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,14 +6,14 @@ steps:
     - 'pipefail'
     - '-c'
     - |-
-      apt-get update && apt-get install unzip build-essential && ls && make VERSION=$TAG_NAME release-linux
+      apt-get update && apt-get install -y unzip build-essential && ls && make VERSION=$TAG_NAME release-linux
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
         "gsutil",
         "cp",
         "./dist/geotemporal-data-explorer-linux-amd64-$TAG_NAME",
-        "gs://raul-import/versions"
+        "gs://raul-import/versions/$TAG_NAME"
       ]
 
 
